methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: type mismatch;
 found   : Boolean(false)
 required: com.sun.org.apache.xpath.internal.operations.Bool
def haveBaggle():Boolean = {var b:Bool = false;
                                         ^MethodsReturning:1: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {var b:Bool = false;
                           ^